<resources>
    <string name="app_name">OptionMenu</string>


    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="help">ayuda</string>
    <string name="checked">¿Aceptas los terminos?</string>
    <string name="radio">1</string>
    <string name="radio1">2</string>
    <string name="radio2">3</string>

    <string name="submenu">configuracion</string>


    <string name="ultimo">Ya no hay más!</string>
</resources>
